# uiucprescon.pymediaconch

./: .buildinfo  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  LICENSE  MANIFEST.in  README.md  api.html  conanfile.py  development.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: api.doctree  development.doctree  environment.pickle  index.doctree
.github/workflows/: documentation.yml
build_backend/local_backend/: __init__.py  cmake_helpers.py  conan_helpers.py  config_settings.py  local_backend.py  setuptools_targets.py  utils.py
ci/docker/linux/jenkins/: Dockerfile  apt-packages.txt
ci/docker/linux/jenkins/conan/: profile.ini
ci/docker/linux/tox/: Dockerfile  apt-packages.txt
ci/docker/windows/: Dockerfile
ci/docker/windows/chocolatey/: verifyenv.ps1
ci/docker/windows/msvc/: install_msvc.ps1
docs/: make.bat
docs/source/: api.rst  conf.py  development.rst  index.rst
requirements/: requirements-dev.txt
scripts/: build_linux_wheels.sh  build_mac_wheel.sh  build_windows.ps1
scripts/resources/package_for_linux/: Dockerfile  build-wheel.sh
scripts/resources/package_for_linux/conan/: profile.ini
scripts/resources/windows/: Dockerfile  profile.ps1
scripts/resources/windows/chocolatey/: packages.config
scripts/resources/windows/msvc/: install_msvc.ps1
scripts/resources/windows/scoop/: scoopfile.json
src/uiucprescon/pymediaconch/: pymediaconch.cpp
tests/: sample_media_files.py  test_integration.py  test_simple.py
