[build-system]
requires = [
    "cmake",
    'pybind11>2.13.0',
    "pybind11_stubgen",
    'uiucprescon.build @ https://github.com/UIUCLibrary/uiucprescon_build/releases/download/v0.3.0/uiucprescon_build-0.3.0-py3-none-any.whl',
]
build-backend = "uiucprescon.build"

[project]
name = "uiucprescon.pymediaconch"
version = "0.1.2.dev0"
requires-python = '>=3.9'
license = "NCSA"
license-files = ["LICENSE"]
description = "Python wrapper around mediaconch"
maintainers = [
    {name="Henry Borchers", email="hborcher@illinois.edu"}
]
authors = [
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]
readme = {file = "README.md", content-type = "text/markdown"}

[dependency-groups]
test = ["coverage", "pytest",]
docs = ["sphinx", 'tomli;python_version<"3.11"']
dev = [
    {include-group = "docs"},
    {include-group = "test"},
    "cmake<4.0",
    "lxml",
    "mypy",
    "pre-commit>=4.3.0",
    "pybind11>=2.13.0",
    "pybind11_stubgen",
    "setuptools",
    "tox",
    "uiucprescon.build @ https://github.com/UIUCLibrary/uiucprescon_build/releases/download/v0.3.0/uiucprescon_build-0.3.0-py3-none-any.whl",
]

deploy = ["twine"]

ci = [
    {include-group = "dev"},
    {include-group = "deploy"},
]


[tool.setuptools]
packages = ["uiucprescon.pymediaconch"]
package-dir = {"" = "src"}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch${prerelease}"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
