[build-system]
requires = ["setuptools", "conan>2.0", "nanobind", "cmake"]
build-backend = "local_backend"
backend-path = ["build_backend"]

[project]
name = "uiucprescon.pymediaconch"
version = "0.1.2.dev0"
requires-python = '>=3.9'
license = "NCSA"
license-files = ["LICENSE"]
description = "Python wrapper around mediaconch"
maintainers = [
    {name="Henry Borchers", email="hborcher@illinois.edu"}
]
authors = [
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]
readme = {file = "README.md", content-type = "text/markdown"}

[dependency-groups]
test = ["coverage", "pytest"]
tox = ["tox"]
build = ["nanobind", "cmake<4.0", "conan>2.0", "setuptools", "delvewheel;os_name == 'nt'"]
docs = [
    {include-group = "build"},
    "sphinx",
    'tomli;python_version<"3.11"',
]
dev = [
    {include-group = "docs"},
    {include-group = "test"},
    {include-group = "tox"},
    {include-group = "build"},
    "lxml",
    "mypy",
    "pre-commit>=4.3.0",
]

deploy = ["twine"]

ci = [
    {include-group = "dev"},
    {include-group = "deploy"},
    "gcovr;sys_platform == 'linux'",
]


[tool.setuptools]
packages = ["uiucprescon.pymediaconch"]
package-dir = {"uiucprescon.pymediaconch" = "src/uiucprescon/pymediaconch"}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch${prerelease}"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv.extra-build-dependencies]
uiucprescon-pymediaconch = ["nanobind", "cmake", "conan>2.0"]